<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fillViewport="false"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <ImageView
                android:id="@+id/image_andrody"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_andrody"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/fade_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image_andrody"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:background="#04e1fa"
                android:text="@string/fade_in"
                android:textSize="30sp" />

            <Button
                android:id="@+id/blink"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/fade_in"
                android:layout_alignStart="@+id/fade_in"
                android:layout_below="@+id/fade_in"
                android:layout_marginTop="10dp"
                android:background="#04e1fa"
                android:text="@string/blink"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fade_out"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/fade_in"
                android:layout_marginRight="20dp"
                android:background="#04e1fa"
                android:text="@string/fade_out"
                android:textSize="30sp" />

            <Button
                android:id="@+id/crossfading"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/fade_out"
                android:layout_alignStart="@+id/fade_out"
                android:layout_alignTop="@+id/blink"
                android:background="#04e1fa"
                android:text="@string/crossfading"
                android:textSize="21sp" />

            <Button
                android:id="@+id/zoom"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blink"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#04e1fa"
                android:text="@string/zoom"
                android:textSize="30sp" />
            <Button
                android:id="@+id/rotate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#04e1fa"
                android:text="@string/rotate"
                android:textSize="30sp"
                android:layout_alignTop="@+id/zoom"
                android:layout_alignLeft="@+id/crossfading"
                android:layout_alignStart="@+id/crossfading" />
            <Button
                android:id="@+id/move"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zoom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#04e1fa"
                android:text="@string/move"
                android:textSize="30sp" />
            <Button
                android:id="@+id/slide_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#04e1fa"
                android:text="@string/slide_up"
                android:textSize="30sp"
                android:layout_below="@id/rotate"
               android:layout_marginTop="10dp"
                android:layout_alignLeft="@+id/rotate"
                android:layout_alignStart="@+id/rotate" />
            <Button
                android:id="@+id/slide_down"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/move"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#04e1fa"
                android:text="@string/slide_down"
                android:textSize="25sp" />
            <Button
                android:id="@+id/bounce"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#04e1fa"
                android:text="@string/bounce"
                android:textSize="30sp"
                android:layout_below="@id/slide_up"
                android:layout_marginTop="10dp"
                android:layout_alignLeft="@+id/rotate"
                android:layout_alignStart="@+id/rotate" />
            <Button
                android:id="@+id/sequential"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/slide_down"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#04e1fa"
                android:text="@string/sequential"
                android:textSize="23sp" />
            <Button
                android:id="@+id/together"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#04e1fa"
                android:text="@string/together"
                android:textSize="28sp"
                android:layout_below="@id/bounce"
                android:layout_marginTop="10dp"
                android:layout_alignLeft="@+id/rotate"
                android:layout_alignStart="@+id/rotate" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>